# sandbox

./: README.md
agent-studio/: AGENTS.md  DECISIONS.md  Makefile  PROGRESS.md  README.md  docs-spec.md  goal-docs.md  goal-self-improve.md  goal.md  pyproject.toml  self-improve-spec.md  spec.md
agent-studio/.claude/agents/: studio-architect.md  studio-reviewer-a.md
agent-studio/.claude/hooks/: audit.sh  guard.sh
agent-studio/.claude/skills/acceptance-criteria/: SKILL.md
agent-studio/.claude/skills/prompt-audit/: SKILL.md
agent-studio/config/: studio.yaml
agent-studio/deploy/: vps.md
agent-studio/docs/: README.md  architecture.md
agent-studio/docs/architecture/: 01-system-overview.md  02-state-machine.md  03-trackers-and-work-items.md  04-agents-skills-runtimes.md  05-goal-loop-internals.md  06-orchestrator-and-safety.md  07-observability.md
agent-studio/docs/concepts/: 01-from-prompts-to-loops.md  02-anatomy-of-a-harness.md  03-the-ralph-loop.md  04-verification-is-the-bottleneck.md  05-autonomy-and-safety.md
agent-studio/docs/guide/: 01-install-and-first-run.md  02-daily-workflow.md  03-configuration.md  04-going-live-on-github.md  05-troubleshooting.md
agent-studio/docs/labs/: 01-build-an-app.md  02-add-a-feature.md  03-fix-a-bug.md  04-watch-the-loop-save-itself.md  05-teach-the-team.md  06-extend-the-studio.md
agent-studio/memory/architect/: journal.md
agent-studio/memory/prd/: journal.md
agent-studio/prompts/: architect.md  coder.md  prd.md  reviewer.md
agent-studio/prompts/evolving/: architect.md  coder.md  improver.md  prd.md  reviewer.md
agent-studio/research/: claude-code-skills-research.md
agent-studio/scripts/: check_links.py  verify-docs.sh  verify-improve.sh
agent-studio/studio/: __main__.py  cli.py  config.py  demo.py  events.py  execution.py  improve.py  loop.py  metrics.py  orchestrator.py  reflection.py  state.py
agent-studio/studio/agents/: base.py  registry.py
agent-studio/studio/runtime/: base.py  claude_code.py  codex.py  fake.py
agent-studio/studio/tracker/: __init__.py  github.py  linear.py  markdown.py
agent-studio/tests/: test_agent_sets.py  test_demo.py  test_e2e_lifecycle.py  test_events.py  test_improve_allowlist.py  test_improve_apply.py  test_improve_gate.py  test_improver.py  test_loop.py  test_metrics.py  test_reflection.py  test_regression_guard.py  test_runtime.py  test_state.py  test_streaming.py  test_tracker_linear.py  test_tracker_markdown.py
agent-studio/tests/data/: claude-stream-sample.jsonl
agent-studio/tests/fixtures/: scorecard-events.jsonl
agent-studio/tiny-baseball/: .gitignore  ARCHITECTURE.md  GOAL.md  README.md  SPEC.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
agent-studio/tiny-baseball/scripts/: shot.mjs  validate.mjs
agent-studio/tiny-baseball/src/: audio.ts  hud.ts  main.ts  style.css
agent-studio/tiny-baseball/src/engine/: game.ts  prng.ts  resolve.ts
agent-studio/tiny-baseball/src/render/: ball.ts  crowd.ts  palette.ts  players.ts  scene.ts
agent-studio/tiny-baseball/tests/e2e/: game.spec.ts
agent-studio/tiny-baseball/tests/unit/: determinism.test.ts  gameover.test.ts  innings.test.ts  palette.test.ts  resolve.test.ts  strikes.test.ts
agentic-harness/: .gitignore  DECISIONS.md  PROGRESS.md  README.md  agentic-engineering-field-guide.md  goal.md  pyproject.toml  spec.md
buckos/: .dockerignore  .env.example  README.md  SPEC.md  package-lock.json  package.json  playwright.config.ts  vite.config.mts
deliverator/: .gitignore  AGENTS.md  CLAUDE.md  LABS.md  OVERVIEW.md  PROPOSAL-claude-code-native.md  README.md  bootstrap_labels.sh
deliverator/orchestrator/: .env.example  bot.py  check_models.py  dashboard.py  gh.py  llm.py  loop.py  provision_keys.py  pyproject.toml  runner.py  skills.py  tmuxview.py  worktree.py
deliverator/orchestrator/agents/: roles.py
deliverator/orchestrator/tests/: conftest.py  test_parallel.py  test_retry_context.py  test_runner.py  test_tmuxview.py
disk-scout/: README.md  index.html
docs/: AGENTS.md  CLAUDE.md  cozy-farm-inspiration.html  demos.html  index.html  the-agentic-loop.html  wind.html  wisy.html
docx2md/: README.md  docx2md.py
dotfiles/: README.md  zprofile  zshrc
downhill-madness/: GOAL.md  README.md  index.html  package-lock.json  package.json  spec.md
jorgepereira.io/: ADDING-AN-APP.md  CLAUDE.md  Caddyfile  Dockerfile  README.md  THEME.md  docker-compose.yml  index.html  nginx.conf  redeploy.sh
marky-mark/: .gitignore  ARCHITECTURE.md  GOAL.md  (+32 more)
marky-mark/src-tauri/: Cargo.toml  tauri.conf.json
marky-mark/src-tauri/capabilities/: default.json
marky-mark/src-tauri/icons/: icon.icns
marky-mark/src-tauri/src/: lib.rs  main.rs
meeting-notes/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
meeting-notes/src-tauri/src/: audio.rs  commands.rs  diar.rs  document.rs  engine.rs  lib.rs  models.rs  namer.rs  paths.rs  stt.rs  vad.rs  voices.rs
meeting-notes/src-tauri/tests/: download_real.rs  golden_two_speakers.rs  real_mic.rs  recovery.rs  voice_memory.rs
numshub/src-tauri/: Cargo.toml  Info.plist  models.json  tauri.conf.json
numshub/src-tauri/capabilities/: default.json  macos.json
numshub/src-tauri/icons/: icon.icns
numshub/src-tauri/src/: audio.rs  cleanup.rs  commands.rs  downloader.rs  enhance.rs  history.rs  hotkey.rs  lib.rs  live.rs  main.rs  overlay.rs  paste.rs  pipeline.rs  registry.rs  settings.rs  state.rs  stt.rs  themes.rs  tray.rs  tray_probe.rs
studio-console/: DECISIONS.md  Makefile  PROGRESS.md  README.md  config.yaml  goal-streaming.md  goal.md  pyproject.toml  spec-streaming.md  spec.md
studio-console/fixtures/: demo-events.jsonl  demo-status.json
studio-console/scripts/: verify.sh
studio-console/studio_console/: __init__.py  __main__.py  app.py  config.py  events.py  replay.py  snapshot.py  state.py  tailer.py
studio-console/studio_console/widgets/: __init__.py  panels.py
studio-console/tests/: test_app.py  test_events.py  test_panels.py  test_snapshot_replay.py  test_state.py  test_tailer.py
(+645 files in other folders)
