[project]
name = "studio-console"
version = "0.1.0"
description = "A terminal dashboard for Agent Studio — watch your agents work"
requires-python = ">=3.11"
dependencies = ["textual>=8.0", "rich>=13.0", "pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "pytest-asyncio>=0.24", "ruff>=0.6"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
extend-exclude = [".venv"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.coverage.run]
source = ["studio_console"]
