[project]
name = "agentic-loop"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40",          # OpenRouter speaks the OpenAI API dialect
    "httpx>=0.27",           # raw HTTP (model check, Telegram)
    "PyGithub>=2.3",         # GitHub REST API as Python objects
    "pydantic>=2.7",         # structured-data validation
    "tenacity>=8.3",         # retry/backoff decorators
    "rich>=13.7",            # readable colored logs
    "python-dotenv>=1.0",    # loads .env into env vars
]
