[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "deliverator"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "PyGithub>=2.3",         # GitHub REST API as Python objects
    "tenacity>=8.3",         # retry/backoff decorators
    "rich>=13.7",            # readable colored logs
    "python-dotenv>=1.0",    # loads .env into env vars
]

# The orchestrator runs in place (python loop.py) — `pip install -e .` exists
# only to install the dependencies above. No packages to discover or install.
[tool.setuptools]
py-modules = []
