[package]
name = "markimark"
version = "0.1.0"
description = "A lightweight, fast, themeable markdown viewer"
edition = "2021"

[lib]
name = "markimark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-opener = "2.5.4"

[profile.release]
codegen-units = 1
lto = true
strip = true
